plugins {
  id 'java-library'

  // Formatting is disabled due to poor handling of type annotations; wait until
  // this issue is fixed: https://github.com/google/google-java-format/issues/5
  // // Code formatting with Google Java Format; defines targets "goJF" and "verJF".
  // id 'com.github.sherter.google-java-format' version '0.7.1'

}

repositories {
  mavenCentral()
}

def cfVersion = '4.0.1-SNAPSHOT'
def checkerJar = file("../m2-local/org/checkerframework/checker/${cfVersion}/checker-${cfVersion}.jar")
def checkerQualJar = file("../m2-local/org/checkerframework/checker-qual/${cfVersion}/checker-qual-${cfVersion}.jar")

dependencies {
  // https://mvnrepository.com/artifact/org.plumelib/reflection-util
  implementation 'org.plumelib:reflection-util:1.0.3'

  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
  compileOnly files(checkerQualJar)
  testCompileOnly files(checkerQualJar)
  annotationProcessor files(checkerJar)
}

java {
  sourceCompatibility = JavaVersion.VERSION_1_8
  targetCompatibility = JavaVersion.VERSION_1_8
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter'
        excludeEngines 'junit-vintage'
    }

    testLogging {
        outputs.upToDateWhen{false}
        showStandardStreams = true
    }
}

tasks.withType(JavaCompile).configureEach {
  options.fork = true
  options.compilerArgs << "-Xlint:all,-processing"
  options.annotationProcessorPath = files(checkerJar)
  options.compilerArgs += [
    '-processor', 'org.checkerframework.checker.resourceleak.ResourceLeakChecker',
    '-Xmaxerrs', '10000',
    '-Xmaxwarns', '10000',
    '-Adetailedmsgtext',
    '-AshowPrefixInWarningMessages',
    '-Awarns',
    '-ArequirePrefixInWarningSuppressions',
    '-AwarnUnneededSuppressions',
    '-AdisableReturnsReceiver',
  ]
  options.forkOptions.jvmArgs += [
    '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
    '-Xmx8g',
  ]
  options.forkOptions.jvmArgs += "-Xmx2g"
}

/// Javadoc

// Turn Javadoc warnings into errors.
javadoc {
  options.addStringOption('Xwerror', '-Xdoclint:all')
  options.addStringOption('private', '-quiet')
  // WeakIdentityHashMap leads to lots of Javadoc warnings due to missing Javadoc.
  // How can I generate Javadoc for it while still being strict for all other files?
  exclude '**/WeakIdentityHashMap.java'
  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
      options.addStringOption("-release", "8");
  }
  doLast {
    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
      ant.replaceregexp(match:"@import url\\('resources/fonts/dejavu.css'\\);\\s*", replace:'',
	flags:'g', byline:true) {
	fileset(dir: destinationDir)
      }
    }
  }
}
check.dependsOn javadoc

task javadocWeb(type: Javadoc) {
  description "Upload API documentation to website."
  source = sourceSets.main.allJava
  destinationDir = file("/cse/web/research/plumelib/${project.name}/api")
  classpath = project.sourceSets.main.compileClasspath
  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
      options.addStringOption("-release", "8");
  }
  doLast {
    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
      ant.replaceregexp(match:"@import url\\('resources/fonts/dejavu.css'\\);\\s*", replace:'',
	flags:'g', byline:true) {
	fileset(dir: destinationDir)
      }
    }
  }
}

configurations {
  requireJavadoc
}
dependencies {
  requireJavadoc "org.plumelib:require-javadoc:1.0.1"
}
task requireJavadoc(type: JavaExec) {
  description = 'Ensures that Javadoc documentation exists.'
  mainClass = "org.plumelib.javadoc.RequireJavadoc"
  classpath = configurations.requireJavadoc
  args "src/main/java", "--dont-require=WeakHasherMap|WeakIdentityHashMap"
}
check.dependsOn requireJavadoc
javadocWeb.dependsOn requireJavadoc

/// Emacs support

/* Make Emacs TAGS table */
task tags(type: Exec) {
  description "Run etags to create an Emacs TAGS table"
  commandLine "bash", "-c", "find src/ -name '*.java' | sort | xargs etags"
}

/// Determine classpath

task printTestCompileClasspath {
  description = 'Print the compile-time test classpath'
  doFirst {
    println "Compile classpath:"
    println sourceSets.test.compileClasspath.asPath
  }
}
